--- a/src/components/videos/Video.css
+++ b/src/components/videos/Video.css
@@ -13,6 +13,7 @@
   padding: 1rem 0 1rem 0rem;
   color: var(--paragraph-color);
   line-height: 130%;
+  text-align: center;
 }
 
 /* small  */
